src/pages/MainPage.css
body, html {
    height: 100%; /* Make sure the body takes full height */
    margin: 0; /* Remove default margin */
}

#main-page {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;    
    width: 100vw;
}

#chat-container {
    display: flex;
    /* flex-direction: column; */
    background-color: #27272a;
    border-radius: 12px;
    width: 60vh;
    height: 90vh;
    filter: drop-shadow(
      2px 2px 4px #022c22
    );
    justify-content: center;
}

#bubble-container {
    flex-grow: 1; 
    display: flex;
    flex-direction: column-reverse; 
    overflow-y: auto; 
    margin-bottom: 13%;
}

#input-container {
    position: fixed;
    display: flex;
    width: 94%;
    bottom: 2%; 
}

.expandable-textarea {
    width: 100%;
    text-align: left;
    box-sizing: border-box;
    border: none;
    border-radius: 24px;
    resize: none;
    background-color: #3f3f46;
    color: white;
    outline: none;
    overflow: hidden;
    padding-inline: 16px;
    padding-block: 12px;
    padding-inline-end: 13%;
    font-size: 1.1em;
}

#input-button {
    position: absolute;
    background-color: #71717a;
    border: 0px;
    border-radius: 1.8em;
    width: 32px;
    height: 32px;
    right: 5.5%;
    bottom: 2.5%;
}

.text-bubble {
    max-width: 60%;
    border-radius: 24px;
    background-color: #3f3f46;
    color: white;
    padding: 8px 16px;
    font-size: 1.1em;
    margin: 0 16px 8px 0;
    margin-left: auto;
}

#input-button:hover {
    background-color: #a1a1aa;
}

.fa-paper-plane {
    size: 16px;
    margin-right: 3px;
}

